--- a/kubernetes/cluster/platform/cert-manager/cloudflare-api-secret.yaml
+++ b/kubernetes/cluster/platform/cert-manager/cloudflare-api-secret.yaml
@@ -1,12 +1,11 @@
----
 apiVersion: 'kubernetes-client.io/v1'
 kind: ExternalSecret
 metadata:
-  name: unifi-configuration
-  namespace: admin
+  name: cloudlare-api-secret
+  namespace: cert-manager
 spec:
   backendType: vault
   vaultMountPoint: kubernetes
   vaultRole: external-secrets-role
   dataFrom:
-    - secrets/data/admin/unifi
+    - secrets/data/cert-manager/cloudflare-api
