--- a/kubernetes/cluster/infra/nfs-provisioner/helm-release.yaml
+++ b/kubernetes/cluster/infra/nfs-provisioner/helm-release.yaml
@@ -1,9 +1,8 @@
----
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: nfs-provisioner
-  namespace: admin
+  namespace: infra
 spec:
   interval: 5m
   upgrade:
