--- a/kubernetes/cluster/platform/kustomization.yaml
+++ b/kubernetes/cluster/platform/kustomization.yaml
@@ -1,7 +1,15 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - vault
+  - cert-manager
   - external-secrets
+  - garage
+  - mailrise
+  - newt
+  - registry
   - secret-sync
+  - traefik
+  - unifi
+  - valut
