--- a/kubernetes/cluster/platform/registry/helm-release.yaml
+++ b/kubernetes/cluster/platform/registry/helm-release.yaml
@@ -1,9 +1,8 @@
----
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: registry
-  namespace: admin
+  namespace: platform
 spec:
   interval: 5m
   upgrade:
@@ -11,7 +10,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 4.4.0
+      version: 4.5.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s
