--- a/kubernetes/cluster/platform/unifi/unifi-configuration-secret.yaml
+++ b/kubernetes/cluster/platform/unifi/unifi-configuration-secret.yaml
@@ -1,12 +1,11 @@
----
 apiVersion: 'kubernetes-client.io/v1'
 kind: ExternalSecret
 metadata:
-  name: cloudlare-api-secret
-  namespace: cert-manager
+  name: unifi-configuration
+  namespace: admin
 spec:
   backendType: vault
   vaultMountPoint: kubernetes
   vaultRole: external-secrets-role
   dataFrom:
-    - secrets/data/cert-manager/cloudflare-api
+    - secrets/data/admin/unifi
