--- a/kubernetes/cluster/infra/nfs-provisioner/helm-release.yaml
+++ b/kubernetes/cluster/infra/nfs-provisioner/helm-release.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: nfs-provisioner
-  namespace: infra
+  namespace: nfs-provisioner
 spec:
   interval: 5m
   upgrade:
