Add value AWS sops secret

--- a/kubernetes/cluster/flux-bootstrap/30-platform.yaml
+++ b/kubernetes/cluster/flux-bootstrap/30-platform.yaml
@@ -13,3 +13,7 @@ spec:
   dependsOn:
     - name: infra
       namespace: flux-system
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-gpg
