--- a/kubernetes/cluster/platform/newt/helm-release.yaml
+++ b/kubernetes/cluster/platform/newt/helm-release.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: newt
-  namespace: platform
+  namespace: admin
 spec:
   interval: 5m
   upgrade:
