--- a/kubernetes/cluster/platform/newt/kustomization.yaml
+++ b/kubernetes/cluster/platform/newt/kustomization.yaml
@@ -2,5 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - newt-configuration-secret.yaml
+  - newt-configuration-secret.sops.yaml
   - helm-release.yaml
