Make mongo port a string value

--- a/kubernetes/cluster/platform/unifi/unifi-configuration-secret.sops.yaml
+++ b/kubernetes/cluster/platform/unifi/unifi-configuration-secret.sops.yaml
@@ -6,7 +6,7 @@ stringData:
     MONGO_INITDB_ROOT_PASSWORD: ENC[AES256_GCM,data:qYI9V6c4o4eh9XUfDn4xBhDV+fB0BmpwA8VrwBVm8wc=,iv:XqyUoUjtIYSHZwZnNtSvn4z4M4a2X9G7YKDJHDiYGEU=,tag:F/4Dm0iKo2SthJzEzizosA==,type:str]
     MONGO_INITDB_ROOT_USERNAME: ENC[AES256_GCM,data:/b2ICw==,iv:/pBk13k+H9yFyZxBZi780Rgl0isR42X+ADac7TlMEro=,tag:tWHUPspdccCMDC+Ayc/LJA==,type:str]
     MONGO_PASS: ENC[AES256_GCM,data:cerMW7HzFax1mRcgkQUHF9b6YPj3wbnje0gLxvtK99E=,iv:zuASoGuxenRzguw+VaFdzupdNQkibjcmust/dWuLQps=,tag:Xj2kECIA/1+Orp0WbUtpVg==,type:str]
-    MONGO_PORT: ENC[AES256_GCM,data:jbCFkb4=,iv:oyZxeTj3lZtis/nANhiM1UoTsgM/hnZDaUwh4NpkZFo=,tag:zxDXvbO35H0Cz5axetBBaw==,type:int]
+    MONGO_PORT: ENC[AES256_GCM,data:ocazP2Q=,iv:yt2z+aWLrKE4O8UpRZCp1Raq03wHXUoTQG1wz482eOw=,tag:SrMTICOL11JaQ+cWAw2mKA==,type:str]
     MONGO_USER: ENC[AES256_GCM,data:4BG3niw=,iv:A8RuzKhlCsv01DtND6qE+5awkJv248JaYP4SOe23TLo=,tag:WQQsmjB049ygR0KNpzXAkQ==,type:str]
 kind: Secret
 metadata:
@@ -16,8 +16,8 @@ metadata:
     labels:
         reconcile.fluxcd.io/watch: Enabled
 sops:
-    lastmodified: "2026-01-03T22:37:47Z"
-    mac: ENC[AES256_GCM,data:wSaBBz6SO1R6TgLRwXGwqSkdjbNY3dtzArQnEwJtiu6Lr3dWpFdxWfAFHA02EwTMoHrgMTkMoOQT/9S9uEVFSWC7GTZCRi1NoIdiae33JpB8qZTm8EGlKXQiat5ySIt0JPStui7gCl7e5yQLOc6vMhzkrUTwJ9tJMM8ZHykhTw4=,iv:j2hmrGj71o5eOl7wwdUkCJqH4UhU52bDJ1a+ZHkxFOs=,tag:mS+/MfuDoYDHkwJBCUmxqA==,type:str]
+    lastmodified: "2026-01-03T22:47:08Z"
+    mac: ENC[AES256_GCM,data:PVBggWd3pScSrgzkB7fZVVFYW9iYoH9awINFgkgvGOSU/xO0i7htoelbMdCdvCsTK8xPKkLLBHcA7Fi1MlASA3aH02VSyi74pQJdu+IKSHYeTyNU0WZzb1E/5JiDW9T4oEnsQMbxIiiCKR0NXg4XiaRNLLN21JW8IeTurqXxua8=,iv:DzuQWYYcvsOu2edEDzCgmHCEeaPDoIRkQHsGCRL5tAs=,tag:N5SUwBT848ne6NPVkotsGw==,type:str]
     pgp:
         - created_at: "2025-12-19T04:32:28Z"
           enc: |-
