--- a/kubernetes/cluster/workloads/crypto/chia/helm-release.yaml
+++ b/kubernetes/cluster/workloads/crypto/chia/helm-release.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: chia-blockchain
-  namespace: crypto
+  namespace: chia
 spec:
   interval: 5m
   upgrade:
@@ -21,15 +21,6 @@ spec:
       chia-blockchain: {}
     controllers:
       app:
-        pod:
-          annotations:
-            vault.hashicorp.com/agent-inject: 'true'
-            vault.hashicorp.com/role: 'chia-role'
-            vault.hashicorp.com/agent-inject-secret-key.txt: 'secrets/crypto/chia'
-            vault.hashicorp.com/agent-inject-template-key.txt: |
-              {{- with secret "secrets/crypto/chia" -}}
-              {{ .Data.data.key }}
-              {{- end -}}
         serviceAccount:
           identifier: chia-blockchain
         containers:
@@ -39,14 +30,14 @@ spec:
               tag: 2.5.7
             env:
               TZ: America/Toronto
-              keys: /vault/secrets/key.txt
+              keys: /key
     service:
       app:
         controller: app
         type: LoadBalancer
+        externalTrafficPolicy: Local
         annotations:
           metallb.universe.tf/loadBalancerIPs: 10.200.12.2
-          metallb.universe.tf/allow-shared-ip: "crypto-sharing"
         ports:
           p2p:  
             enabled: true
@@ -57,6 +48,15 @@ spec:
             port: 8447
             protocol: TCP
     persistence:
+      key:
+        enabled: true
+        type: secret
+        name: chia-secrets
+        advancedMounts:
+          app:
+            app:
+              - path: /key
+                subPath: key
       blockchain:
         enabled: true
         type: nfs
