--- a/kubernetes/cluster/workloads/small-indie-bot/bot/kustomization.yaml
+++ b/kubernetes/cluster/workloads/small-indie-bot/bot/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
-  - bot-configuration-secret.yaml
+  - bot-configuration-secret.sops.yaml
