--- a/kubernetes/cluster/platform/secrets/ghcr-image-pull-secret.sops.yaml
+++ b/kubernetes/cluster/platform/secrets/ghcr-image-pull-secret.sops.yaml
@@ -10,8 +10,8 @@ metadata:
     labels:
         reconcile.fluxcd.io/watch: Enabled
 sops:
-    lastmodified: "2026-01-04T01:35:40Z"
-    mac: ENC[AES256_GCM,data:4WkdDLtqG1IUXTZlC3oDLBrxpuFlYdOYsgu6qKFpoq7kP55Qqd9AwDhup7aqbouMAnE0bpDnv1+fcjF0yL+cxAqePd8B4QZ+sn0TypPKqRxJx1Xsgst3+A37qtXL62XcQTB+44DYxVIj6nZevmF41qcJw8/rFPReupkNZk2/t5g=,iv:dXNBZ7U5EZxyoRabryaBQrPKlniNR3o7mMNmiRWSDAE=,tag:nMoeJJ2TdDTwrQsMdOfLgQ==,type:str]
+    lastmodified: "2026-01-04T01:47:17Z"
+    mac: ENC[AES256_GCM,data:XxqY6I4Mgd2LrNVGmMhg/eYbV75nfqcogp9tAIGFt5uZ6Cp1/Bj1fJj3rFPz9Po8nihzmzLFKKViAjSCRxHUW65nPLP8oa8H9v8eH5TOwforXpI2UtTJQA8T2OkXK9W+5mLJu+NZsuLdV18gidCGizHJegzutqRTPApJ341hSTA=,iv:5Z7QWXSJztFAH8j7OeHL911rg0abLjtQRjfCwWSVHXg=,tag:/O7KWwLVhj+Fww5yZCMjZQ==,type:str]
     pgp:
         - created_at: "2025-12-19T04:32:28Z"
           enc: |-
@@ -37,10 +37,10 @@ spec:
         namespace: flux-system
     destinationNamespaces:
         - small-indie-bot
-        - crypto
+        - bitcoin
 sops:
-    lastmodified: "2026-01-04T01:35:40Z"
-    mac: ENC[AES256_GCM,data:4WkdDLtqG1IUXTZlC3oDLBrxpuFlYdOYsgu6qKFpoq7kP55Qqd9AwDhup7aqbouMAnE0bpDnv1+fcjF0yL+cxAqePd8B4QZ+sn0TypPKqRxJx1Xsgst3+A37qtXL62XcQTB+44DYxVIj6nZevmF41qcJw8/rFPReupkNZk2/t5g=,iv:dXNBZ7U5EZxyoRabryaBQrPKlniNR3o7mMNmiRWSDAE=,tag:nMoeJJ2TdDTwrQsMdOfLgQ==,type:str]
+    lastmodified: "2026-01-04T01:47:17Z"
+    mac: ENC[AES256_GCM,data:XxqY6I4Mgd2LrNVGmMhg/eYbV75nfqcogp9tAIGFt5uZ6Cp1/Bj1fJj3rFPz9Po8nihzmzLFKKViAjSCRxHUW65nPLP8oa8H9v8eH5TOwforXpI2UtTJQA8T2OkXK9W+5mLJu+NZsuLdV18gidCGizHJegzutqRTPApJ341hSTA=,iv:5Z7QWXSJztFAH8j7OeHL911rg0abLjtQRjfCwWSVHXg=,tag:/O7KWwLVhj+Fww5yZCMjZQ==,type:str]
     pgp:
         - created_at: "2025-12-19T04:32:28Z"
           enc: |-
