--- a/kubernetes/cluster/workloads/other-webapps/kustomization.yaml
+++ b/kubernetes/cluster/workloads/other-webapps/kustomization.yaml
@@ -1,8 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - 3d-printing
-  - crypto
-  - media
-  - other-webapps
-  - small-indie-bot
+  - namespace.yaml
+  - stirlingpdf
