--- a/kubernetes/cluster/workloads/small-indie-bot/bot/bot-configuration-secret.sops.yaml
+++ b/kubernetes/cluster/workloads/small-indie-bot/bot/bot-configuration-secret.sops.yaml
@@ -5,8 +5,8 @@ stringData:
     CONFIG_LAST_UPDATE_PATH: ENC[AES256_GCM,data:+gYnnKTD0jgYEMlX91XgHaoLOSDE,iv:VTX05gKpxGplRdql7ebS8p7d7ZbJn0dtrIPwMpYdjbo=,tag:PFTOw3h3XnWnF0jb5JmIAQ==,type:str]
     DATABASE_URL: ENC[AES256_GCM,data:oFujBmiIBA7LNRqrSZ2lACyNNLlB7CHnyBK30hnJJ/wnnwvjWzeBnKciyeAHkTSUKQHM383oJsl+bH7vFE4auV07odRVDDNPdpTuzbxF1h31+KM8TRsT6WjvyRkOIP/y0XT+3YNKLQNBHtPHUvPvLv9axwes,iv:WeSH16hhzTOcEGgVUsIDp+mxTilH74bWWt0F4/OtZik=,tag:eplLKAP6joQuhFmzgxXWRg==,type:str]
     DISCORD_TOKEN: ENC[AES256_GCM,data:RatLh4QhkU+eDmNqVGN3Sh0lUxtxu3iWt5NQNezsMAvNzrdwg/GfF6Mx8TEmkfX+yGM/X3fFcNBrnDXIlDw3Nowpan9JA/nh,iv:3xxry9ewSszzQxG9Yx881miRNOeKuL7WkN28rFE6H94=,tag:4s+7+hKCUgKAdzVKdqOoNQ==,type:str]
-    ENABLE_AUCTION_SCANNER: ENC[AES256_GCM,data:d9Rg71g=,iv:+GsRbIccbsVJm4ZM4nV6mxOMEOXMLizegVlRVWtOTHM=,tag:NtH/k7jl0i7rTSSbtKnS9w==,type:bool]
-    ENABLE_DISCORD: ENC[AES256_GCM,data:Lz0XlQ==,iv:E/8Rm/4tEzqTXdku57EGrONerffZWD+60/vL3mnewbM=,tag:SVaJ5sxA4x86CH8tHF5SSQ==,type:bool]
+    ENABLE_AUCTION_SCANNER: ENC[AES256_GCM,data:3AQASLQ=,iv:HhhooWFkXD9sAJnMLL7tB/ybKf5N6R6fyFabhj574LI=,tag:C9UqEghF+OzJXvQfuMk43g==,type:str]
+    ENABLE_DISCORD: ENC[AES256_GCM,data:Hcnf0Q==,iv:wufov6nbrIEOmJwBgSocWbgYtAWahZilZ00HNcqxB+o=,tag:j5Vpde/KPDl0i/JoZjZmow==,type:str]
     INFLUXDB_BUCKET: ENC[AES256_GCM,data:wGnllJ4662TE0/fMw48UP/DYYQ==,iv:IxXnv3IRJdCWAk1J9nYgbU8UF1lSh/adsYjFDAZRkhI=,tag:XeGbY3PD70WmYygEPnk8mQ==,type:str]
     INFLUXDB_HOST: ENC[AES256_GCM,data:TFGVb3dFVTlF4tHRj0PjJC/rjm4dI3J9mdIm/3kfFrcoWeJ4Kb5M0uRyRA2P8ucu8Q/83i0Z/K3v3A==,iv:OKdGuUBuqF/7B3ru3CNFh3hEvQ5UVuM8/h74vQVGnG0=,tag:UaO0cmC7sSLKiWclmYr2KQ==,type:str]
     INFLUXDB_ORG: ENC[AES256_GCM,data:FlQFyaLGRiNBdAik3SYD,iv:sEJNktXP1NHO7m44W/aOSRVVnz5ciCBAcWGwr+mCf8I=,tag:y9FhWfgLUtGOdVmU8pEXgQ==,type:str]
@@ -20,8 +20,8 @@ metadata:
     labels:
         reconcile.fluxcd.io/watch: Enabled
 sops:
-    lastmodified: "2026-01-04T01:28:22Z"
-    mac: ENC[AES256_GCM,data:70Bds6bHqu9eGuvCwPSWm2g+XdIaTEa4+EnH2oGXaWc1hLiI3HkSqGNn7ryUGlfo8ezq+TyoZSoyGIEYNEziaTa9wEF9s8STPuT0VG6v3iDfemoSrulV0iI85TWNqid8RTFG5eQtzKP/tjXAo4hiQgDnXOU0G6Xnge2O6CJEb8k=,iv:7ozKtJoaERJyrWpZUFtM7rzfw8cUw3HK2WXpoQ1g88k=,tag:j8rN64J5UXw3oHRYQJ9RQw==,type:str]
+    lastmodified: "2026-01-04T01:52:34Z"
+    mac: ENC[AES256_GCM,data:EUmKCHJaHPoqiCeyfK0P5Z7DyYhEqd9IurWoXViYAUyNrdv1Z7PanG1QEddRNkTxtZWrNBYqP+VqemTPkPAWZzobGUVr1c5Jh5/PnhcRxV5qeHmcnGEUVMIZEIc9gAHtSC1i0yIiSe5FU7bk3E7TcMuFTxggzIScASjxkvQBD3U=,iv:t+D5E7Lw0zSoe+wpUWuUzApAmlBmy2MINy4/5h76ahc=,tag:ipEtXrqJZeSo2gwKsBzlPQ==,type:str]
     pgp:
         - created_at: "2025-12-19T04:32:28Z"
           enc: |-
