Move more webapps to workloads

--- a/kubernetes/cluster/apps/other-webapps/homepage/helm-release.yaml
+++ b/kubernetes/cluster/apps/other-webapps/homepage/helm-release.yaml
@@ -40,7 +40,7 @@ spec:
       bookmarks:
         - Social:
           - Reddit:
-            - abbr: Reddit
+            - abbr: RDT
               href: https://reddit.com
         - Dev:
           - Github:
