--- a/kubernetes/cluster/workloads/other-webapps/lubelog/kustomization.yaml
+++ b/kubernetes/cluster/workloads/other-webapps/lubelog/kustomization.yaml
@@ -1,6 +1,5 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - paperless-configuration-secret.yaml
   - helm-release.yaml
+  - lubelog-configuration-secret.sops.yaml
