Move last webapp workloads

--- a/kubernetes/cluster/workloads/other-webapps/kustomization.yaml
+++ b/kubernetes/cluster/workloads/other-webapps/kustomization.yaml
@@ -3,7 +3,10 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - ghostfolio
+  - homepage
+  - immich
   - lubelog
+  - ollama
   - stirlingpdf
   - vaultwarden
   - wallos
