--- a/kubernetes/cluster/workloads/other-webapps/ollama/kustomization.yaml
+++ b/kubernetes/cluster/workloads/other-webapps/ollama/kustomization.yaml
@@ -1,7 +1,5 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
-  - immich
-  - ollama
+  - helm-release.yaml
+  - persistence.yaml
