Move all of smart-home minus hass

--- a/kubernetes/cluster/workloads/games/factorio/factorio-secret.sops.yaml
+++ b/kubernetes/cluster/workloads/games/factorio/factorio-secret.sops.yaml
@@ -8,12 +8,12 @@ kind: Secret
 metadata:
     creationTimestamp: null
     name: factorio-sops-secret
-    namespace: smart-home
+    namespace: games
     labels:
         reconcile.fluxcd.io/watch: Enabled
 sops:
-    lastmodified: "2025-12-29T04:14:22Z"
-    mac: ENC[AES256_GCM,data:Uk91LWFaqcApnXbGgwqJvrmzDp/B0EdTFGl6jEyykIadJ2U8IJTrAe/ClUw6UGmzaE9L3oQi0mHFElj0YdKQTxy51igF1ZPFLQXO5vZ541WmLg6aCL3OCD1P0OuWo2krDAfHXQ1T7lWLdmhdsILsLiMKAWY5pA5wJj8kHqH80I0=,iv:bLF7mui9jH0ihP2CMzwQF17CM5LEQmH+BGpe7pUV+GI=,tag:QLUo9AUsRR5VyYT1fk6KZg==,type:str]
+    lastmodified: "2026-01-04T05:34:44Z"
+    mac: ENC[AES256_GCM,data:F/LQUUUtENw7vF+zJeFgP1xZVTPppW4jTebKhi529Xi60wGKA1/xGdToZwiGgOkBbVaAwxTprVXGFWvJddSndlmCfTtLIYOrx9rjw7rpADRFJ/xhivaC8IFxFNuXqa3BNbBZKYC6QIq4QhaexdR5Fg9Rzlb2xmoMrVkO+OxkBos=,iv:3Z0jY0wL9C8NrtfI/alIhd3md43hipScwghlnD+AjiU=,tag:mAr2skKKahF5fqHtVzySKQ==,type:str]
     pgp:
         - created_at: "2025-12-28T23:05:12Z"
           enc: |-
