--- a/kubernetes/cluster/workloads/smart-home/hass/kustomization.yaml
+++ b/kubernetes/cluster/workloads/smart-home/hass/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - homeassistant-postgres-secret.sops.yaml
   - helm-release.yaml
+  - homeassistant-postgres-secret.sops.yaml
+  - persistence.yaml
