--- a/kubernetes/cluster/platform/cert-manager/kustomization.yaml
+++ b/kubernetes/cluster/platform/cert-manager/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - helm-release.yaml
   - cloudflare-api-secret.sops.yaml
+  - helm-release.yaml
   - letsencrypt-production-cf.yaml
+  - namespace.yaml
