--- a/kubernetes/cluster/platform/kustomization.yaml
+++ b/kubernetes/cluster/platform/kustomization.yaml
@@ -1,16 +1,6 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
+  - admin
   - cert-manager
-  - external-secrets
-  - garage
-  - mailrise
-  - newt
-  - registry
-  - secret-sync
   - secrets
-  - traefik
-  - unifi
-  - vault
