--- a/kubernetes/cluster/platform/secrets/kustomization.yaml
+++ b/kubernetes/cluster/platform/secrets/kustomization.yaml
@@ -1,4 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - external-secrets
+  - secret-sync
   - ghcr-image-pull-secret.sops.yaml
+  - namespace.yaml
+  - vault
