--- a/kubernetes/cluster/platform/admin/garage/persistence.yaml
+++ b/kubernetes/cluster/platform/admin/garage/persistence.yaml
@@ -15,7 +15,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: garage-data
-  namespace: smart-home
+  namespace: admin
 spec:
   accessModes:
     - ReadWriteOnce
