--- a/kubernetes/cluster/platform/monitoring/loki/kustomization.yaml
+++ b/kubernetes/cluster/platform/monitoring/loki/kustomization.yaml
@@ -2,6 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - zabbix-postgres-configuration-secret.yaml
-  - postgres-helm-release.yaml
   - helm-release.yaml
+  - loki-configuration-secret.sops.yaml
