--- a/kubernetes/cluster/platform/monitoring/zabbix/kustomization.yaml
+++ b/kubernetes/cluster/platform/monitoring/zabbix/kustomization.yaml
@@ -1,5 +1,6 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - zabbix-postgres-configuration-secret.sops.yaml
+  - postgres-helm-release.yaml
   - helm-release.yaml
