Update zabbix secret

--- a/kubernetes/cluster/platform/monitoring/zabbix/zabbix-postgres-configuration-secret.sops.yaml
+++ b/kubernetes/cluster/platform/monitoring/zabbix/zabbix-postgres-configuration-secret.sops.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 stringData:
-    DATABASE: ENC[AES256_GCM,data:dB0=,iv:hMeuavM6V1iZf6zWX5BoFfcG5hGL5J+pb+HBcMxsVAY=,tag:hytC8YJkr6VNFcUJrw48+A==,type:int]
+    DATABASE: ENC[AES256_GCM,data:OuFYU+Bf,iv:HZeAQu8xP2I4B/0xd3+aIpoPSvHbgoIn2k9t7YoAodI=,tag:YKmCD+OehhroAA9DbCPHmQ==,type:str]
     HOSTNAME: ENC[AES256_GCM,data:TpsmXWR8+r4Cio9Yg2fpwTocrt/Ev4bQCgzaO/H9kCzq3oquNE8GgWnIjvg=,iv:+yH7CbYv/Xcz5wn/VZbt/VD4W8FCJzZ3fVyJbdTio0s=,tag:n1iaqmSemmjrv658zvkuAw==,type:str]
     PASSWORD: ENC[AES256_GCM,data:ax3U2QZdTnG1s5v/+vIsvWD21ozX1YhMol3OvRNp+2c=,iv:Rhv8lcr2nsUF4M6ow0kOkev1Hnmvw3N90mSpqeSrD8s=,tag:74rYSpks1b3va1m7UITUyw==,type:str]
     PORT: ENC[AES256_GCM,data:+zc6SA==,iv:u2BVili6Xqwjqo3u668jpZGEtzijZPINCKMcgmsDagc=,tag:QN2S/d/lFJ5QXm8u0Sh+xA==,type:str]
@@ -14,8 +14,8 @@ metadata:
     labels:
         reconcile.fluxcd.io/watch: Enabled
 sops:
-    lastmodified: "2026-01-05T01:22:29Z"
-    mac: ENC[AES256_GCM,data:QpXV1iuLp7Vb8CslXfrF0xJoPRG94pulPEeMQkuVKx7DSrTMcGwCrwTBifUGXHAk5W7sSU816fjGKc7jKndmRco/OPcWZIjW2rXfAdESj8fO3KQneNVDi8WowfAPkJCdZD3spLQrtF3g2IuuyX5mGYvXBjInAN6Cm0dYztbl3zI=,iv:lnomHTdGUP4oamf5QnEUQxzexB68NWG0/4X4cPQJltk=,tag:wGGC+4zewR6Ydvhd4XILHA==,type:str]
+    lastmodified: "2026-01-05T02:55:07Z"
+    mac: ENC[AES256_GCM,data:PcO/Dg8dBMmd1DoLqtC1e+3OpFU+GJzp/H1d2Vo6KcWy1c3EteQDHUPcvf6otSuYk80tKlQdQ3w9Idb7X0MjmOVCiePuLtLrKs6EFQMdTR4g0vdIacsIgWyyTyW4feQL/F86QVxyvFbN5dJsXcWoEAEhDQ0KEyxiux3GqGtDXSg=,iv:t2rw4MNRPRULdMWTLRx2kA/EQTL6aizP3nS/U8oqB7Q=,tag:/2mM+2jtzKG1Q0hv3OnidQ==,type:str]
     pgp:
         - created_at: "2025-12-19T04:32:28Z"
           enc: |-
