Chnage pgdata dir

--- a/kubernetes/cluster/workloads/other-webapps/affine/affine-postgres-configuration-secret.sops.yaml
+++ b/kubernetes/cluster/workloads/other-webapps/affine/affine-postgres-configuration-secret.sops.yaml
@@ -4,6 +4,7 @@ stringData:
     POSTGRES_PASSWORD: ENC[AES256_GCM,data:x5K0JAvwHr8adTXY4JcT9TRPIF/X/C1MT+r5c9YsWFM=,iv:TVAMa0QLa8MRlD00w4IoFG6wIxQIp8qzeiixaFCZr9U=,tag:hHwK2XYWuG1mq3tOTXuzXA==,type:str]
     POSTGRES_DB: ENC[AES256_GCM,data:tN7kBu27,iv:jrWSAMoPU5i1QvlgILHl5EXamUrxzhtcoH5t7sQMXpY=,tag:n6V+p5xn99Aok07spvbsHQ==,type:str]
     POSTGRES_INITDB_ARGS: ENC[AES256_GCM,data:ZTAwJaEmLwsh+bzumBsgCg==,iv:VJWy2ggauS5K8EIK+kwFLcQVf2D/S97F/MpBTZrES44=,tag:lV1CEMMiwwuFmm16M84ILg==,type:str]
+    PGDATA: ENC[AES256_GCM,data:p+OheLYrf+nHNKYemDyZLMtJUoD3duKS8L5djZtEdw==,iv:+Ww4OOS3iWkKdtVX25CX9tgNSMPy18/9fi1Qicq/ZYI=,tag:Jnec9Ym0aSj7sL0x7mKvaA==,type:str]
 kind: Secret
 metadata:
     creationTimestamp: null
@@ -12,8 +13,8 @@ metadata:
     labels:
         reconcile.fluxcd.io/watch: Enabled
 sops:
-    lastmodified: "2026-01-05T03:50:36Z"
-    mac: ENC[AES256_GCM,data:2QrWmXAWGOYa/kuHVcptax4l2Ho3nukga15j9tI6UgBcbdl0JABBzVy05IkI9u4nmbjuoxiKJfMKWJmQVsKiK1Nriaigh0asb+YX9HdkoPspZ/8CTQmb5ZMAaDwX4l/iOMyfo9nTX0pHBu3rijKVZSWL/2xBvDGiW82qQfQWgjs=,iv:ViV2K0rUq0wKCcHYXRd3E7UcSM3lYE2bKJFVTMqom00=,tag:PM24o5glBfZ4aPTJPT7y5g==,type:str]
+    lastmodified: "2026-01-05T04:31:56Z"
+    mac: ENC[AES256_GCM,data:OUSORv3ZHbnuiFGOWWxmoL9bKZinu60dO/KLZHM43Pta075ejX60EkeB0KnQqcfkUzQQRhEgv3n2BsMZCKKDgHf8SVD2b4Q8f6MTkj0DBIOcGJ2M7XcZDqIJoLT1CnvF3Exk1WhRn+ApbHwnQFy22Kjuyul6WVWECI9pwUneO68=,iv:AuNpI4cUYxbMbcXO64JbxKcYefcHoTAi73UAyCD+QHo=,tag:aU1gEEBTWn8yXeqy+jRLtQ==,type:str]
     pgp:
         - created_at: "2025-12-19T04:32:28Z"
           enc: |-
