--- a/kubernetes/cluster/infra/cni-cilium/cilium/helm-release.yaml
+++ b/kubernetes/cluster/infra/cni-cilium/cilium/helm-release.yaml
@@ -50,6 +50,7 @@ spec:
       enableSourceIPVerification: false
     extraConfig:
       egress-multi-home-ip-rule-compat: "true"
+      enable-masquerade-to-route-source: "true"
     egressGateway:
       enabled: true
     securityContext:
