--- a/kubernetes/talos/talconfig.yaml
+++ b/kubernetes/talos/talconfig.yaml
@@ -1,6 +1,6 @@
 ---
 clusterName: tam.land
-talosVersion: v1.12.0
+talosVersion: v1.12.1
 kubernetesVersion: v1.35.0
 endpoint: https://kube.local.tam.land:6443
 additionalApiServerCertSans:
@@ -27,7 +27,10 @@ worker:
     - |-
       machine:
         sysctls:
+          net.ipv4.ip_forward: "1"
           net.ipv4.conf.all.rp_filter: 0
+          net.ipv4.conf.ens19.rp_filter: "0"
+          net.ipv4.conf.eno1.42.rp_filter: "0"
     - |-
       machine:
         sysctls:
