More updates to Cilium

--- a/kubernetes/cluster/infra/cni-cilium/cilium/helm-release.yaml
+++ b/kubernetes/cluster/infra/cni-cilium/cilium/helm-release.yaml
@@ -44,7 +44,8 @@ spec:
       masquerade: true
     bpf:
       masquerade: true
-    egressMasqueradeInterfaces: "ens19 eno1.42"
+    devices: "ens18 eno1 ens19 eno1.42"
+    enableIPv6Masquerade: false
     nodePort:
       enabled: true
     daemon:
