Move qbittorrent to gluetun

--- a/kubernetes/cluster/platform/secrets/kustomization.yaml
+++ b/kubernetes/cluster/platform/secrets/kustomization.yaml
@@ -4,5 +4,6 @@ resources:
   - external-secrets
   - secret-sync
   - ghcr-image-pull-secret.sops.yaml
+  - gluetun-wg.sops.yaml
   - namespace.yaml
   - vault
