--- a/kubernetes/cluster/workloads/media/qbittorrent/qbittorrent-gluetun-secret.sops.yaml
+++ b/kubernetes/cluster/workloads/media/qbittorrent/qbittorrent-gluetun-secret.sops.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 stringData:
     WIREGUARD_PRIVATE_KEY: ENC[AES256_GCM,data:dM1beiX9SYv0SUQ8niQ6d65PVdBctQ9IWi1oju+4E4UyLK+xW22AGXdOA+M=,iv:c5A5QzBae5EZ11zx7+a+SPRQrT85GbHcFl5k5S4X9Oo=,tag:sC36kw8aGOdy/AX/xFXg2w==,type:str]
     WIREGUARD_ADDRESSES: ENC[AES256_GCM,data:f5xjlFpar0g6EyjKo9d+,iv:Q6HKXB+AOPt2Zj81UG0WitdUdLruUzgDSkQ7pFDJ/Uk=,tag:Ii4NRDRdG/gxsO5Sh/OUag==,type:str]
-    FIREWALL_INPUT_PORTS: ENC[AES256_GCM,data:X62ejA==,iv:QkgpQmCjX8JPvEuHYGmo5vYoNp0a1wQE2uulY9E1ObY=,tag:4Id1T8wVb0FuSKhbL+odiA==,type:str]
+    FIREWALL_INPUT_PORTS: ENC[AES256_GCM,data:p9LSWw==,iv:JD14qpSNDYy2wunRVCCtaR6YFrdda3YR+ut9r6rSzUI=,tag:6iqP8q7jYTd5Ra9O6mlYUQ==,type:str]
 kind: Secret
 metadata:
     creationTimestamp: null
@@ -11,8 +11,8 @@ metadata:
     labels:
         reconcile.fluxcd.io/watch: Enabled
 sops:
-    lastmodified: "2026-01-11T20:36:20Z"
-    mac: ENC[AES256_GCM,data:VvlU6BsU9BSG/lk1sPF6o5usUfstt4ttKceDGqnJ5Ix6E4Ycxi2et8fXgvL/XKuuLtPqUk6DUdY89kKiFyaxxtBlTiP7oLo4nIaTGkuAiSuzU9IG1nTG3zqenfwynCfT12r1+wNsw4TaRVfb3PZa9L+A6cmlSqyBW9lxA16ITUQ=,iv:W7IsaubtrGVERs6A/T/JOCk59z+8N+0uua4/xqvM9zI=,tag:Nk3JC9J0VvrrGePMIXeHtg==,type:str]
+    lastmodified: "2026-01-11T20:43:58Z"
+    mac: ENC[AES256_GCM,data:nN8qGBrbymJMDuWbrm9CSEA/Lkrsn/jeWZ09dRx2MaiQeyzZEwNH54dKzJTlQUXlS/KHbS/Tx6iDROAn+3X7lerrr5qPxHPf/QGkFpPcpRFED/Ew0wFXYo5cpCPjAaClrK93HaNfEnv0UT8QdjxvsFQeOqgoVagujwLSpjRf1bg=,iv:4n5+vfj2JaOIWffe5/NYnXKbiuGc0sDDzPNqaUS/5rA=,tag:3BKdV2iFirjSDeRpeR/4hQ==,type:str]
     pgp:
         - created_at: "2025-12-19T04:32:28Z"
           enc: |-
