Add missing public key

--- a/kubernetes/cluster/platform/secrets/gluetun-wg.sops.yaml
+++ b/kubernetes/cluster/platform/secrets/gluetun-wg.sops.yaml
@@ -4,6 +4,7 @@ stringData:
     VPN_TYPE: ENC[AES256_GCM,data:9YfVqhRccs64,iv:+HQV3b2eufJD5fgufgE4SeQuRZM4ux59oyMXT8L0hvg=,tag:G1fVgJ/WqIdOKNo5YvgcXw==,type:str]
     WIREGUARD_ENDPOINT_IP: ENC[AES256_GCM,data:DSZEWElk7swPIRo=,iv:p7SdPnLWJboQketqI0rOZnXXhYzVZTRTRpWHOtcQvXE=,tag:E+hp2HaO5toixKqDx4RfXw==,type:str]
     WIREGUARD_ENDPOINT_PORT: ENC[AES256_GCM,data:hHd9ubM=,iv:U7zpLZeo77BlyNjgdvNUx0FV0t2bM+UDaF6Guc29geA=,tag:TarjU96ZWqYHLeOmwdqYJQ==,type:str]
+    WIREGUARD_PUBLIC_KEY: ENC[AES256_GCM,data:Q0J57TNCAYTUMbVZIlLGW97IKqyeQHFyI8KjrETBdHsdUc3G9pgUvrGN+TM=,iv:CqS2c4c2DrqJHIh2AuCdQXqRhdSOGWH2RUWEbgPjJXg=,tag:rpNePYs+gxWU+51qwK4ulQ==,type:str]
     WIREGUARD_MTU: ENC[AES256_GCM,data:KWs7pA==,iv:Izs6oHr8Q5iU5tVBIME+tYg0W+90Pd7dfNeT+HwetOI=,tag:3bD9Zli2vU7t45wBWDWe/w==,type:str]
     DOT: ENC[AES256_GCM,data:tEPJ,iv:Y/u3EVdNxLQyf/5vjtV3qgYrGwRt3w1vbKZjqoNrDoY=,tag:axyCIneEy666o2DdSqRmqg==,type:str]
     FIREWALL_OUTBOUND_SUBNETS: ENC[AES256_GCM,data:FonQBQag+nCFOz7P5J/uEdtTpZO2maY85w461ODCZoUYZ7vQS0d3IjQ=,iv:IdqqTN/oRUBv34Yl/8fvtK7Ux8vSbDM0mE2mHVgWogc=,tag:ubxdIngAyslDp2J5ZzlIpQ==,type:str]
@@ -17,8 +18,8 @@ metadata:
     labels:
         reconcile.fluxcd.io/watch: Enabled
 sops:
-    lastmodified: "2026-01-11T20:26:27Z"
-    mac: ENC[AES256_GCM,data:6AnhsSC6Dc70WymjwmtaLsrHMDktIgT15TJt5wWum4IqylABAabLSiHpIMhenLm6fpjxYbmknQDLkyYwejUmB5ZP9DJACOFyb+OvGEloTmIDwQa/L+CEVNtVoCcaljyc3Hi+LcUkmlFmaexE2G3LnV5fcfp6s/9nFsC6EtMMKoI=,iv:8S2ZNk7mNV1xzb2Zw3gNP7HJlNVQNveL9hU8cAqSeHg=,tag:G42M1DqnIg3YjO76HMLznQ==,type:str]
+    lastmodified: "2026-01-11T20:50:02Z"
+    mac: ENC[AES256_GCM,data:K8dVzjIBvgMQwoPr0S3D3b77DSOvOeDw/OtMyKo5X4uVE9id2ckeX1d+ehXJdmHt4iP8LrshbamV5hCvj9oaz2zc3dAlreZ5H8nI4KRkdSFermBA1OwAP8U5mvoOmYZcowfpk7RY74lumZkdONYMX5QiXe269xShyg5/NAutGxc=,iv:YYKehZjHXFTPxHcBGZ+zoR3ZC71HdWe5AWfBhdYajEs=,tag:WsmeQPFNkQ1TMJVBuNZ6Ug==,type:str]
     pgp:
         - created_at: "2025-12-19T04:32:28Z"
           enc: |-
@@ -45,8 +46,8 @@ spec:
     destinationNamespaces:
         - media
 sops:
-    lastmodified: "2026-01-11T20:26:27Z"
-    mac: ENC[AES256_GCM,data:6AnhsSC6Dc70WymjwmtaLsrHMDktIgT15TJt5wWum4IqylABAabLSiHpIMhenLm6fpjxYbmknQDLkyYwejUmB5ZP9DJACOFyb+OvGEloTmIDwQa/L+CEVNtVoCcaljyc3Hi+LcUkmlFmaexE2G3LnV5fcfp6s/9nFsC6EtMMKoI=,iv:8S2ZNk7mNV1xzb2Zw3gNP7HJlNVQNveL9hU8cAqSeHg=,tag:G42M1DqnIg3YjO76HMLznQ==,type:str]
+    lastmodified: "2026-01-11T20:50:02Z"
+    mac: ENC[AES256_GCM,data:K8dVzjIBvgMQwoPr0S3D3b77DSOvOeDw/OtMyKo5X4uVE9id2ckeX1d+ehXJdmHt4iP8LrshbamV5hCvj9oaz2zc3dAlreZ5H8nI4KRkdSFermBA1OwAP8U5mvoOmYZcowfpk7RY74lumZkdONYMX5QiXe269xShyg5/NAutGxc=,iv:YYKehZjHXFTPxHcBGZ+zoR3ZC71HdWe5AWfBhdYajEs=,tag:WsmeQPFNkQ1TMJVBuNZ6Ug==,type:str]
     pgp:
         - created_at: "2025-12-19T04:32:28Z"
           enc: |-
