Update prowlarr to gluetun

--- a/kubernetes/cluster/workloads/media/prowlarr/helm-release.yaml
+++ b/kubernetes/cluster/workloads/media/prowlarr/helm-release.yaml
@@ -17,17 +17,26 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
-    defaultPodOptions:
-      labels:
-        egress-gw: vpn
-      # dnsConfig:
-      #   options:
-      #     - name: ndots
-      #       value: "1"
+    # defaultPodOptions:
+    #   dnsConfig:
+    #     options:
+    #       - name: ndots
+    #         value: "1"
     controllers:
       app:
         enabled: true
         initContainers:
+          gluetun:
+            image:
+              repository: qmcgaw/gluetun
+              tag: v3.41.0
+            restartPolicy: Always
+            securityContext:
+              capabilities:
+                add: [ "NET_ADMIN" ] 
+            envFrom:
+              - secret: gluetun-wg
+              - secret: prowlarr-gluetun
           dnsdist:
             image:
               repository: docker.io/powerdns/dnsdist-19
