--- a/kubernetes/cluster/workloads/media/prowlarr/kustomization.yaml
+++ b/kubernetes/cluster/workloads/media/prowlarr/kustomization.yaml
@@ -2,3 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
+  - prowlarr-gluetun-secret.sops.yaml
