Dispacharr use gluetun

--- a/kubernetes/cluster/workloads/media/dispacharr/helm-release.yaml
+++ b/kubernetes/cluster/workloads/media/dispacharr/helm-release.yaml
@@ -17,11 +17,20 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
-    defaultPodOptions:
-      labels:
-        egress-gw: vpn
     controllers:
       app:
+        initContainers:
+          gluetun:
+            image:
+              repository: qmcgaw/gluetun
+              tag: v3.41.0
+            restartPolicy: Always
+            securityContext:
+              capabilities:
+                add: [ "NET_ADMIN" ] 
+            envFrom:
+              - secret: gluetun-wg
+              - secret: dispacharr-gluetun
         containers:
           app:
             image:
