--- a/kubernetes/cluster/platform/secrets/gluetun-wg.sops.yaml
+++ b/kubernetes/cluster/platform/secrets/gluetun-wg.sops.yaml
@@ -7,6 +7,8 @@ stringData:
     WIREGUARD_PUBLIC_KEY: ENC[AES256_GCM,data:Q0J57TNCAYTUMbVZIlLGW97IKqyeQHFyI8KjrETBdHsdUc3G9pgUvrGN+TM=,iv:CqS2c4c2DrqJHIh2AuCdQXqRhdSOGWH2RUWEbgPjJXg=,tag:rpNePYs+gxWU+51qwK4ulQ==,type:str]
     WIREGUARD_MTU: ENC[AES256_GCM,data:KWs7pA==,iv:Izs6oHr8Q5iU5tVBIME+tYg0W+90Pd7dfNeT+HwetOI=,tag:3bD9Zli2vU7t45wBWDWe/w==,type:str]
     DOT: ENC[AES256_GCM,data:tEPJ,iv:Y/u3EVdNxLQyf/5vjtV3qgYrGwRt3w1vbKZjqoNrDoY=,tag:axyCIneEy666o2DdSqRmqg==,type:str]
+    DNS_SERVER: ENC[AES256_GCM,data:bQIQ,iv:r2vDZJxEMlN4lF3ENNZOG7twu4pQD6X9AP5IltfuP+M=,tag:f701WndRp9wSuu0G0aRW9Q==,type:str]
+    DNS_ADDRESS: ENC[AES256_GCM,data:6MQzbKJeIpkV,iv:nsdoHqIJE5PSHbn6Y5GaF0v5f788A6LHZQ1TS6SICsU=,tag:5RAU3GmsFz6eicnNdm5TRw==,type:str]
     FIREWALL_OUTBOUND_SUBNETS: ENC[AES256_GCM,data:FonQBQag+nCFOz7P5J/uEdtTpZO2maY85w461ODCZoUYZ7vQS0d3IjQ=,iv:IdqqTN/oRUBv34Yl/8fvtK7Ux8vSbDM0mE2mHVgWogc=,tag:ubxdIngAyslDp2J5ZzlIpQ==,type:str]
     HEALTH_HTTP_ADDRESS: ENC[AES256_GCM,data:0M92FT7ANguqiPCMYws=,iv:Q78IGTsalX3nmyGA1EjfYu81vc76xBK0kisLGqEb9l4=,tag:6qK50IyWnM3vWTDkh6ADDQ==,type:str]
     TZ: ENC[AES256_GCM,data:CYUr59nj2ikXpEVM0Put,iv:Yi/LxKWS8MERHqkKTFWjChhV29LcOMgbn7NXCgs5fAk=,tag:Mx7smZDMN3IUksjMDOi81Q==,type:str]
@@ -18,8 +20,8 @@ metadata:
     labels:
         reconcile.fluxcd.io/watch: Enabled
 sops:
-    lastmodified: "2026-01-11T20:50:02Z"
-    mac: ENC[AES256_GCM,data:K8dVzjIBvgMQwoPr0S3D3b77DSOvOeDw/OtMyKo5X4uVE9id2ckeX1d+ehXJdmHt4iP8LrshbamV5hCvj9oaz2zc3dAlreZ5H8nI4KRkdSFermBA1OwAP8U5mvoOmYZcowfpk7RY74lumZkdONYMX5QiXe269xShyg5/NAutGxc=,iv:YYKehZjHXFTPxHcBGZ+zoR3ZC71HdWe5AWfBhdYajEs=,tag:WsmeQPFNkQ1TMJVBuNZ6Ug==,type:str]
+    lastmodified: "2026-01-19T04:46:20Z"
+    mac: ENC[AES256_GCM,data:eyqNkk7eK8/VcGZOY0R2+WQ5buBYAhIF8aMifyrrXg5Kd3X/KC4qMeldsoicbe5yEBOWWQQFHQ/B0A6PoYqRUt9kmqkW1UTrEZulk+WEwe1hZgUbgVcx6y93cijsVrBNsP8Lhb9EOyUdOa6p4YywrckVLOvPLFt7QnGWVls2+FE=,iv:A4bae5IBAdUaRDL2YJ9ZdMsFR5cOTnUIEVrb5MNrdJw=,tag:muy15ZxTm+023lVrpWiaqw==,type:str]
     pgp:
         - created_at: "2025-12-19T04:32:28Z"
           enc: |-
@@ -46,8 +48,8 @@ spec:
     destinationNamespaces:
         - media
 sops:
-    lastmodified: "2026-01-11T20:50:02Z"
-    mac: ENC[AES256_GCM,data:K8dVzjIBvgMQwoPr0S3D3b77DSOvOeDw/OtMyKo5X4uVE9id2ckeX1d+ehXJdmHt4iP8LrshbamV5hCvj9oaz2zc3dAlreZ5H8nI4KRkdSFermBA1OwAP8U5mvoOmYZcowfpk7RY74lumZkdONYMX5QiXe269xShyg5/NAutGxc=,iv:YYKehZjHXFTPxHcBGZ+zoR3ZC71HdWe5AWfBhdYajEs=,tag:WsmeQPFNkQ1TMJVBuNZ6Ug==,type:str]
+    lastmodified: "2026-01-19T04:46:20Z"
+    mac: ENC[AES256_GCM,data:eyqNkk7eK8/VcGZOY0R2+WQ5buBYAhIF8aMifyrrXg5Kd3X/KC4qMeldsoicbe5yEBOWWQQFHQ/B0A6PoYqRUt9kmqkW1UTrEZulk+WEwe1hZgUbgVcx6y93cijsVrBNsP8Lhb9EOyUdOa6p4YywrckVLOvPLFt7QnGWVls2+FE=,iv:A4bae5IBAdUaRDL2YJ9ZdMsFR5cOTnUIEVrb5MNrdJw=,tag:muy15ZxTm+023lVrpWiaqw==,type:str]
     pgp:
         - created_at: "2025-12-19T04:32:28Z"
           enc: |-
