--- a/kubernetes/cluster/flux-bootstrap/homerow-repo.yaml
+++ b/kubernetes/cluster/flux-bootstrap/homerow-repo.yaml
@@ -24,6 +24,9 @@ spec:
   sourceRef:
     kind: GitRepository
     name: homerow-infra-repo
+  dependsOn:
+    - name: platform
+      namespace: flux-system
   decryption:
     provider: sops
     secretRef:
