--- a/kubernetes/cluster/workloads/crypto/electrs/helm-release.yaml
+++ b/kubernetes/cluster/workloads/crypto/electrs/helm-release.yaml
@@ -10,7 +10,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 4.5.0
+      version: 4.6.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -19,7 +19,7 @@ spec:
   values:
     defaultPodOptions:
       imagePullSecrets:
-       - name: ghcr-image-pull-secret
+        - name: ghcr-image-pull-secret
     controllers:
       app:
         enabled: true
@@ -27,12 +27,12 @@ spec:
           app:
             image:
               repository: ghcr.io/anthonytam/electrs
-              tag: v0.10.10
+              tag: v0.11.0
             env:
               ELECTRS_DB_DIR: /app/data
               ELECTRS_ELECTRUM_RPC_ADDR: 0.0.0.0:50001
-              ELECTRS_DAEMON_RPC_ADDR: bitcoind.local.tam.land:8332
-              ELECTRS_DAEMON_P2P_ADDR: bitcoind.local.tam.land:8333
+              ELECTRS_DAEMON_RPC_ADDR: bitcoind.bitcoin.svc.cluster.local:8332
+              ELECTRS_DAEMON_P2P_ADDR: bitcoind.bitcoin.svc.cluster.local:8333
               ELECTRS_MONITORING_ADDR: 0.0.0.0:4224
               ELECTRS_LOG_FILTERS: INFO
             probes:
